# training-transformer-from-scratch

./: .gitignore  LICENCE  README.md  pyproject.toml
src/: config.py
src/data/: download_data.py  preprocess_data.py
src/models/: transformer.py
src/notebooks/: transformer+notes.ipynb
src/scripts/: evaluate.py  inference.py  train.py  transformer.py  utils.py
src/train/: train.py
